feat: Translate with google sheets

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -1,156 +1,155 @@
 {
+    "Австралия": "Australien",
+    "Азия": "Asien",
+    "Анастасия": "Anastasia",
+    "Антарктида": "Antarktis",
+    "Апартаменты": "Apartments",
+    "Африка": "Afrika",
+    "Балкон": "Balkon",
+    "Бассейн": "Schwimmbad",
+    "Без комиссии": "Ohne Provision",
+    "В избранное": "Zu den Favoriten",
+    "ВНЖ в подарок": "Aufenthaltserlaubnis als Geschenk",
+    "ВНЖ и Гражданство": "Aufenthaltserlaubnis",
+    "Валюта": "Währung",
+    "Ванна": "Bad",
+    "Ванные": "Badezimmer",
+    "Ваш телефон": "Ihr Telefon",
+    "Весь": "Alle",
+    "Вид": "Aussicht",
+    "Все": "Alle",
+    "Все локации": "Alle Orte",
+    "Все типы": "Alle Typen",
+    "Всего": "Gesamt",
+    "Вся": "Alle",
     "Вторичка": "Zweitwohnungen",
-    "Номер телефона": "Telefonnummer",
-    "Иванов Алексей Петрович": "Iwanow Alexej Petrowitsch",
-    "ФИО": "Ihr name",
+    "Горы": "Berge",
+    "Гостиные": "Wohnzimmer",
+    "Гражданство": "Staatsbürgerschaft",
+    "До": "Vor",
+    "До 1 км": "Bis 1 km",
+    "До 2 км": "Bis 2 km",
+    "До 500 м": "Bis 500 m",
+    "До моря": "Zum Meer",
+    "Дом": "Haus",
+    "Дома, вилы, коттеджи": "Häuser, Villen, Cottages",
+    "Европа": "Europa",
+    "Если у вас есть вопросы": "Wenn du Fragen hast",
+    "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "Wenn Sie Fragen haben, hinterlassen Sie Ihre Kontaktdaten und wir werden uns in Kürze mit Ihnen in Verbindung setzen",
+    "Еще": "Mehr",
+    "Жилая": "Wohnen",
+    "Заказать просмотр": "Besichtigung buchen",
+    "Замки": "Schlösser",
+    "Запросить актуальные проекты": "Aktuelle Projekte anfordern",
     "Заявка на бронь": "Reservierungsanfrage",
-    "объектов" : "objekte",
-    "Всего" : "Gesamt",
-    "объявлений" : "anzeige",
-    "от" : "aus",
-    "до" : "vor",
-    "От" : "Aus",
-    "До" : "Vor",
-    "Дом" : "Haus",
-    "В избранное" : "Zu den Favoriten",
-    "Спален" : "Schlafzimmer",
-    "Ознакомлен с" : "Bekannt mit",
-    "Согласен на обработку" : "Ich stimme der verarbeitung zu",
-    "персональных данных" : "persönliche daten",
-    "политикой конфеденциальности" : "datenschutzrichtlinie",
-    "Все локации" : "Alle Orte",
-    "Европа" : "Europa",
-    "Азия" : "Asien",
-    "Африка" : "Afrika",
-    "Северная Америка" : "Nordamerika",
-    "Южная Америка" : "Südamerika",
-    "Австралия" : "Australien",
-    "Антарктида" : "Antarktis",
-    "Ваш телефон" : "Ihr Telefon",
-    "Если у вас есть вопросы" : "Wenn du Fragen hast",
-    "оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время" : "Hinterlassen Sie Ihre Kontaktdaten und wir werden uns so schnell wie möglich mit Ihnen in Verbindung setzen",
-    "Узнать больше" : "Um mehr zu lernen",
-    "Гражданство" : "Staatsbürgerschaft",
-    "Мы предлагаем готовые стратегии инвестирования в зарубежную недвижимость" : "Wir bieten fertige Strategien für Investitionen in ausländische Immobilien",
-    "Популярные локации" : "Beliebte Orte",
-    "Турция" : "Türkei",
-    "Вся" : "Alle",
-    "Весь" : "Alle",
-    "Ванна" : "Bad",
-    "Пресса" : "Presse",
-    "О проекте" : "über das Projekt",
-    "в" : "im",
-    "Недвижимость" : "Immobilie",
+    "Иванов Алексей Петрович": "Iwanow Alexej Petrowitsch",
+    "Избранное": "Favoriten",
+    "Инвестиции": "Investitionen",
+    "Интернет": "Internet",
+    "История": "Geschichte",
+    "Квартиры": "Wohnungen",
+    "Квартиры под аренду": "Wohnungen zur Miete",
+    "Квартиры, апартаменты": "Wohnungen, Apartments",
+    "Команда": "Team",
+    "Коммерческая": "Gewerbeimmobilien",
+    "Консультант по продажам": "Verkaufsberaterin",
+    "Контакты": "Kontakt",
+    "Купить": "Kaufen",
+    "Купить в рассрочку": "Ratenkauf",
+    "Лес": "Wald",
+    "Локации": "Standorte",
+    "Локаций": "Standorten",
+    "Локация": "Standort",
+    "Материк": "Kontinent",
+    "Мебель": "Möbel",
+    "Миссия": "Mission",
+    "Мы предлагаем готовые стратегии инвестирования в зарубежную недвижимость": "Wir bieten fertige Strategien für Investitionen in ausländische Immobilien",
+    "Найти": "Finden",
+    "Неважно": "Nicht wichtig",
+    "Недвижимость": "Immobilie",
+    "Новостройки": "Neubauten",
+    "Номер телефона": "Telefonnummer",
+    "О компании": "Über das Unternehmen",
+    "О проекте": "über das Projekt",
+    "Общая": "Gesamt",
+    "Общая площадь": "Gesamtfläche",
+    "Объекты для получения гражданства :name за инвестиции": "Objekte für die Erlangung der :name Staatsbürgerschaft durch Investitionen",
+    "Объявление": "Anzeige",
+    "Объявлений": "Anzeigen",
+    "Объявлений не найдено": "Keine Werbung gefunden",
+    "Объявления": "Anzeigen",
+    "Озеро": "See",
+    "Ознакомлен с": "Bekannt mit",
+    "Ознакомлен с политикой конфиденциальности": "Mit der Datenschutzrichtlinie vertraut",
+    "Описание": "Beschreibung",
+    "Оплата криптовалютой": "Zahlung mit Kryptowährung",
+    "Особенности": "Merkmale",
+    "От": "Aus",
+    "От застройщика": "Vom Bauträger",
+    "Отзывы": "Bewertungen",
+    "Отправить заявку": "Anfrage senden",
+    "Паркинг в подарок": "Kostenloser Parkplatz",
+    "Парковка": "Parkplatz",
+    "Партнерам": "Für Partner",
+    "Пентхаусы": "Penthäuser",
+    "Первая линия": "Erste Linie",
+    "Планировки квартир": "Wohnungsgrundrisse",
+    "Площади (кв.м)": "Fläche (qm)",
+    "Площади кв.м.": "Flächen in qm",
+    "Площадь (кв.м)": "Fläche (qm)",
+    "Пляж": "Strand",
     "Покупка недвижимости": "Kauf einer Immobilie",
-    "Площади (кв.м)" : "Fläche (qm)",
-    "Неважно" : "Nicht wichtig",
-    "Пользовательское соглашение при использовании сайта" : "Nutzungsvereinbarung bei Nutzung der Website",
-    "Страны" : "Länder",
-    "Тип объекта" : "Objekttyp",
-    "Тип недвижимости" : "Art der Immobilie",
-    "Площадь (кв.м)" : "Fläche (qm)",
-    "спал" : "schlafzimmer",
-    "ван" : "bad",
-    "кв.м" : "qm",
-    "Объявлений не найдено" : "Keine Werbung gefunden",
-    "Жилая" : "Wohnen",
-    "Коммерческая" : "Gewerbeimmobilien",
-    "Регионы" : "Regionen",
-
-    "Купить" : "Kaufen",
-    "Снять" : "Mieten",
-    "Инвестиции" : "Investitionen",
-    "ВНЖ и Гражданство" : "Aufenthaltserlaubnis",
-    "Рассрочка" : "Ratenzahlung",
-    "О компании" : "Über das Unternehmen",
-    "Контакты" : "Kontakt",
-    "История" : "Geschichte",
-    "Миссия" : "Mission",
-    "Команда" : "Team",
-    "Отзывы" : "Bewertungen",
-    "Партнерам" : "Für Partner",
-    "Прессе" : "Für die Presse",
-    "Работа у нас" : "Arbeiten bei uns",
-    "Пользовательское соглашение при использовании данных" : "Nutzungsvereinbarung bei Datenverwendung",
-    "Политика обработки персональных данных" : "Datenschutzrichtlinie",
-    "Избранное" : "Favoriten",
-    "локации" : "standorte",
-    "Локации" : "Standorte",
-    "Страна" : "Land",
-    "Регион" : "Region",
-    "Материк" : "Kontinent",
-    "Сначала дешевые" : "Zuerst die günstigen",
-    "Сначала дешёвые" : "Zuerst die günstigen",
-    "Сначала дорогие" : "Zuerst die teuren",
-    "Сначала новые" : "Zuerst die neuen",
-    "Удалить все" : "Alles löschen",
-    "Запросить актуальные проекты" : "Aktuelle Projekte anfordern",
-    "Объекты для получения гражданства :name за инвестиции" : "Objekte für die Erlangung der :name Staatsbürgerschaft durch Investitionen",
-    "Свяжитесь с нами" : "Kontaktieren Sie uns",
-    "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время" : "Wenn Sie Fragen haben, hinterlassen Sie Ihre Kontaktdaten und wir werden uns in Kürze mit Ihnen in Verbindung setzen",
-    "Связаться" : "Kontaktieren",
-    "Ознакомлен с политикой конфиденциальности" : "Mit der Datenschutzrichtlinie vertraut",
-    "Согласен на обработку персональных данных" : "Stimme der Verarbeitung personenbezogener Daten zu",
-    "Локация" : "Standort",
-    "Локаций" : "Standorten",
-    "Объявление" : "Anzeige",
-    "Объявлений" : "Anzeigen",
-    "Объявления" : "Anzeigen",
-    "Все типы" : "Alle Typen",
-    "Квартиры" : "Wohnungen",
-    "Апартаменты" : "Apartments",
-    "Квартиры, апартаменты" : "Wohnungen, Apartments",
-    "Квартиры под аренду" : "Wohnungen zur Miete",
-    "Новостройки" : "Neubauten",
-    "Пентхаусы" : "Penthäuser",
-    "Дома, вилы, коттеджи" : "Häuser, Villen, Cottages",
-    "Замки" : "Schlösser",
-    "Шале" : "Chalets",
-    "Таунхаусы" : "Reihenhäuser",
-    "Спальни, Ванные" : "Schlafzimmer, Badezimmer",
-    "Спальни" : "Schlafzimmer",
-    "спальни" : "Schlafzimmer",
-    "Гостиные" : "Wohnzimmer",
-    "Ванные" : "Badezimmer",
-    "Цена" : "Preis",
-    "Еще" : "Mehr",
-    "Особенности" : "Merkmale",
-    "ТВ" : "Fernseher",
-    "Трасса" : "Rennstrecke",
-    "Бассейн" : "Schwimmbad",
-    "Балкон" : "Balkon",
-    "Интернет" : "Internet",
-    "Пляж" : "Strand",
-    "Мебель" : "Möbel",
-    "Парковка" : "Parkplatz",
-    "Сад" : "Garten",
-    "Вид" : "Aussicht",
-    "Горы" : "Berge",
-    "Озеро" : "See",
-    "Лес" : "Wald",
-    "До моря" : "Zum Meer",
-    "Первая линия" : "Erste Linie",
-    "До 500 м" : "Bis 500 m",
-    "До 1 км" : "Bis 1 km",
-    "До 2 км" : "Bis 2 km",
-    "Площади кв.м." : "Flächen in qm",
-    "Общая" : "Gesamt",
-    "Участок" : "Grundstück",
-    "Все" : "Alle",
-    "От застройщика" : "Vom Bauträger",
-    "Найти" : "Finden",
-    "Валюта" : "Währung",
-    "Купить в рассрочку" : "Ratenkauf",
-    "ВНЖ в подарок" : "Aufenthaltserlaubnis als Geschenk",
-    "Оплата криптовалютой" : "Zahlung mit Kryptowährung",
-    "Без комиссии" : "Ohne Provision",
-    "Паркинг в подарок" : "Kostenloser Parkplatz",
-    "Анастасия" : "Anastasia",
-    "Консультант по продажам" : "Verkaufsberaterin",
-    "Заказать просмотр" : "Besichtigung buchen",
-    "Расположение и инфраструктура" : "Lage und Infrastruktur",
-    "Планировки квартир" : "Wohnungsgrundrisse",
-    "Общая площадь" : "Gesamtfläche",
-    "Описание" : "Beschreibung",
-    "Отправить заявку" : "Anfrage senden"
+    "Политика обработки персональных данных": "Datenschutzrichtlinie",
+    "Пользовательское соглашение при использовании данных": "Nutzungsvereinbarung bei Datenverwendung",
+    "Пользовательское соглашение при использовании сайта": "Nutzungsvereinbarung bei Nutzung der Website",
+    "Популярные локации": "Beliebte Orte",
+    "Пресса": "Presse",
+    "Прессе": "Für die Presse",
+    "Работа у нас": "Arbeiten bei uns",
+    "Расположение и инфраструктура": "Lage und Infrastruktur",
+    "Рассрочка": "Ratenzahlung",
+    "Регион": "Region",
+    "Регионы": "Regionen",
+    "Сад": "Garten",
+    "Свяжитесь с нами": "Kontaktieren Sie uns",
+    "Связаться": "Kontaktieren",
+    "Северная Америка": "Nordamerika",
+    "Сначала дешевые": "Zuerst die günstigen",
+    "Сначала дешёвые": "Zuerst die günstigen",
+    "Сначала дорогие": "Zuerst die teuren",
+    "Сначала новые": "Zuerst die neuen",
+    "Снять": "Mieten",
+    "Согласен на обработку": "Ich stimme der verarbeitung zu",
+    "Согласен на обработку персональных данных": "Stimme der Verarbeitung personenbezogener Daten zu",
+    "Спален": "Schlafzimmer",
+    "Спальни": "Schlafzimmer",
+    "Спальни, Ванные": "Schlafzimmer, Badezimmer",
+    "Страна": "Land",
+    "Страны": "Länder",
+    "ТВ": "Fernseher",
+    "Таунхаусы": "Reihenhäuser",
+    "Тип недвижимости": "Art der Immobilie",
+    "Тип объекта": "Objekttyp",
+    "Трасса": "Rennstrecke",
+    "Турция": "Türkei",
+    "Удалить все": "Alles löschen",
+    "Узнать больше": "Um mehr zu lernen",
+    "Участок": "Grundstück",
+    "ФИО": "Ihr name",
+    "Цена": "Preis",
+    "Шале": "Chalets",
+    "Южная Америка": "Südamerika",
+    "в": "im",
+    "ван": "bad",
+    "до": "vor",
+    "кв.м": "qm",
+    "локации": "standorte",
+    "объектов": "objekte",
+    "объявлений": "anzeige",
+    "оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "Hinterlassen Sie Ihre Kontaktdaten und wir werden uns so schnell wie möglich mit Ihnen in Verbindung setzen",
+    "от": "aus",
+    "персональных данных": "persönliche daten",
+    "политикой конфеденциальности": "datenschutzrichtlinie",
+    "спал": "schlafzimmer",
+    "спальни": "Schlafzimmer"
 }
