--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,148 +1,148 @@
 {
-  "объектов": "أشياء",
-  "Всего" : "المجموع",
-  "объявлений" : "إعلانات",
-  "от" : "من",
-  "до" : "قبل",
-  "От" : "من",
-  "До" : "قبل",
-  "Дом" : "منزل",
-  "В избранное" : "اضافة الى المفضلة",
-  "Спален": "غرف نوم",
-  "Ознакомлен с" : "Familiarized with",
-  "Согласен на обработку": "I agree to processing",
-  "персональных данных" : "personal data",
-  "политикой конфеденциальности": "privacy policy",
-  "Все локации": "All locations",
-  "Европа" : "Europe",
-  "Азия" : "Asia",
-  "Африка" : "Africa",
-  "Северная Америка" : "North America",
-  "Южная Америка" : "South America",
-  "Австралия" : "Australia",
-  "Антарктида" : "Antarctica",
-  "Ваш телефон": "Your phone number",
-  "Если у вас есть вопросы" : "If you have questions",
-  "оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "leave your contact details and we will contact you as soon as possible",
-  "Узнать больше": "To learn more",
-  "Гражданство": "Citizenship",
-  "Мы предлагаем готовые стратегии инвестирования в зарубежную недвижимость": "We offer ready-made strategies for investing in overseas real estate",
-  "Популярные локации": "Popular locations",
-  "Турция" : "Türkiye",
-  "Вся": "All",
-  "Весь": "All",
-  "Ванна" : "Bath",
-  "Пресса" : "Press",
-  "О проекте" : "About the project",
-  "Работа у нас" : "Work with us",
-  "в": "in",
-  "Недвижимость": "Real estate",
-  "Покупка недвижимости": "Buy real estate",
-  "Площади (кв.м)" : "Area (sq.m)",
-  "Неважно": "Doesn't matter",
-  "Купить": "Purchase",
-  "Снять": "Rent",
-  "Инвестиции": "Investments",
-  "ВНЖ и Гражданство": "Residence Permit and Citizenship",
-  "Рассрочка": "Installment plan",
-  "О компании": "About the company",
-  "Контакты": "Contacts",
-  "История": "History",
-  "Миссия": "Mission",
-  "Команда": "Team",
-  "Отзывы": "Reviews",
-  "Партнерам": "For partners",
-  "Прессе": "Press",
-  "Пользовательское соглашение при использовании данных": "User agreement on data use",
-  "Пользовательское соглашение при использовании сайта": "User agreement on data use",
-  "Политика обработки персональных данных": "Data processing policy",
-  "Избранное": "Favorites",
-  "локации": "locations",
-  "Страна": "Locations",
-  "Страны": "Countries",
-  "Регион": "Locations",
-  "Материк": "Locations",
-  "Сначала дешевые": "Cheapest first",
-  "Сначала дешёвые": "Cheapest first",
-  "Сначала дорогие": "Most expensive first",
-  "Сначала новые": "Newest first",
-  "Удалить все": "Delete all",
-  "Запросить актуальные проекты": "Request current projects",
-  "Объекты для получения гражданства :name за инвестиции": "Objects for obtaining :name citizenship by investment",
-  "Свяжитесь с нами": "Contact us",
-  "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "If you have any questions, leave your contact details and we will get in touch with you as soon as possible",
-  "Связаться": "Contact",
-  "Ознакомлен с политикой конфиденциальности": "I have read the privacy policy",
-  "Согласен на обработку персональных данных": "I agree to the processing of personal data",
-  "Локация": "Location",
-  "Локаций": "Locations",
-  "Объявление": "Ad",
-  "Объявлений": "Advertisement",
-  "Объявления": "Advertisements",
-  "Все типы": "All types",
-  "Тип объекта": "Types",
-  "Тип недвижимости": "Types",
-  "Квартиры": "Flats",
-  "Апартаменты": "Apartments",
-  "Квартиры под аренду": "Apartments for rent",
-  "Новостройки": "New buildings",
-  "Пентхаусы": "Penthouses",
-  "Дома, вилы, коттеджи": "Houses, villas, cottages",
-  "Замки": "Castles",
-  "Шале": "Chalets",
-  "Таунхаусы": "Townhouses",
-  "Спальни, Ванные": "Bedrooms,bathrooms",
-  "Спальни": "Bedrooms",
-  "спальни": "Bedrooms",
-  "Гостиные": "Living rooms",
-  "Ванные": "Bathrooms",
-  "Цена": "Price",
-  "Еще": "More",
-  "Особенности": "Features",
-  "ТВ": "TV",
-  "Трасса": "Track",
-  "Бассейн": "Pool",
-  "Балкон": "Balcony",
-  "Интернет": "Internet",
-  "Пляж": "Beach",
-  "Мебель": "Furniture",
-  "Парковка": "Parking",
-  "Сад": "Garden",
-  "Вид": "View",
-  "Горы": "Mountains",
-  "Озеро": "Lake",
-  "Лес": "Forest",
-  "До моря": "To the sea",
-  "Первая линия": "First line",
-  "До 500 м": "Up to 500 m",
-  "До 1 км": "Up to 1 km",
-  "До 2 км": "Up to 2 km",
-  "Площади кв.м." : "Square meters",
-  "Общая" : "Total",
-  "Участок" : "Plot",
-  "Все" : "All",
-  "Площадь (кв.м)" : "Square (sq.m)",
-  "От застройщика" : "From developer",
-  "Найти" : "Search",
-  "Валюта" : "Currency",
-  "Купить в рассрочку" : "Buy in installments",
-  "ВНЖ в подарок" : "Gift of Residence Permit",
-  "Оплата криптовалютой" : "Cryptocurrency payment",
-  "Без комиссии" : "No commission",
-  "Паркинг в подарок" : "Free Parking",
-  "Анастасия" : "Anastasia",
-  "Консультант по продажам" : "Sales consultant",
-  "Заказать просмотр" : "Request a viewing",
-  "Расположение и инфраструктура" : "Location and infrastructure",
-  "Планировки квартир" : "Apartment layouts",
-  "Общая площадь" : "Total area",
-  "Описание" : "Description",
-  "Отправить заявку" : "Send request",
-  "спал" : "room",
-  "ван" : "Bat",
-  "кв.м" : "sq.m",
-  "Объявлений не найдено" : "Ads not found",
-    "Жилая" : "Residential",
-    "Коммерческая" : "Commercial",
-    "Регионы" : "Regions"
+    "Австралия": "Australia",
+    "Азия": "Asia",
+    "Анастасия": "Anastasia",
+    "Антарктида": "Antarctica",
+    "Апартаменты": "Apartments",
+    "Африка": "Africa",
+    "Балкон": "Balcony",
+    "Бассейн": "Pool",
+    "Без комиссии": "No commission",
+    "В избранное": "اضافة الى المفضلة",
+    "ВНЖ в подарок": "Gift of Residence Permit",
+    "ВНЖ и Гражданство": "Residence Permit and Citizenship",
+    "Валюта": "Currency",
+    "Ванна": "Bath",
+    "Ванные": "Bathrooms",
+    "Ваш телефон": "Your phone number",
+    "Весь": "All",
+    "Вид": "View",
+    "Все": "All",
+    "Все локации": "All locations",
+    "Все типы": "All types",
+    "Всего": "المجموع",
+    "Вся": "All",
+    "Горы": "Mountains",
+    "Гостиные": "Living rooms",
+    "Гражданство": "Citizenship",
+    "До": "قبل",
+    "До 1 км": "Up to 1 km",
+    "До 2 км": "Up to 2 km",
+    "До 500 м": "Up to 500 m",
+    "До моря": "To the sea",
+    "Дом": "منزل",
+    "Дома, вилы, коттеджи": "Houses, villas, cottages",
+    "Европа": "Europe",
+    "Если у вас есть вопросы": "If you have questions",
+    "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "If you have any questions, leave your contact details and we will get in touch with you as soon as possible",
+    "Еще": "More",
+    "Жилая": "Residential",
+    "Заказать просмотр": "Request a viewing",
+    "Замки": "Castles",
+    "Запросить актуальные проекты": "Request current projects",
+    "Избранное": "Favorites",
+    "Инвестиции": "Investments",
+    "Интернет": "Internet",
+    "История": "History",
+    "Квартиры": "Flats",
+    "Квартиры под аренду": "Apartments for rent",
+    "Команда": "Team",
+    "Коммерческая": "Commercial",
+    "Консультант по продажам": "Sales consultant",
+    "Контакты": "Contacts",
+    "Купить": "Purchase",
+    "Купить в рассрочку": "Buy in installments",
+    "Лес": "Forest",
+    "Локаций": "Locations",
+    "Локация": "Location",
+    "Материк": "Locations",
+    "Мебель": "Furniture",
+    "Миссия": "Mission",
+    "Мы предлагаем готовые стратегии инвестирования в зарубежную недвижимость": "We offer ready-made strategies for investing in overseas real estate",
+    "Найти": "Search",
+    "Неважно": "Doesn't matter",
+    "Недвижимость": "Real estate",
+    "Новостройки": "New buildings",
+    "О компании": "About the company",
+    "О проекте": "About the project",
+    "Общая": "Total",
+    "Общая площадь": "Total area",
+    "Объекты для получения гражданства :name за инвестиции": "Objects for obtaining :name citizenship by investment",
+    "Объявление": "Ad",
+    "Объявлений": "Advertisement",
+    "Объявлений не найдено": "Ads not found",
+    "Объявления": "Advertisements",
+    "Озеро": "Lake",
+    "Ознакомлен с": "Familiarized with",
+    "Ознакомлен с политикой конфиденциальности": "I have read the privacy policy",
+    "Описание": "Description",
+    "Оплата криптовалютой": "Cryptocurrency payment",
+    "Особенности": "Features",
+    "От": "من",
+    "От застройщика": "From developer",
+    "Отзывы": "Reviews",
+    "Отправить заявку": "Send request",
+    "Паркинг в подарок": "Free Parking",
+    "Парковка": "Parking",
+    "Партнерам": "For partners",
+    "Пентхаусы": "Penthouses",
+    "Первая линия": "First line",
+    "Планировки квартир": "Apartment layouts",
+    "Площади (кв.м)": "Area (sq.m)",
+    "Площади кв.м.": "Square meters",
+    "Площадь (кв.м)": "Square (sq.m)",
+    "Пляж": "Beach",
+    "Покупка недвижимости": "Buy real estate",
+    "Политика обработки персональных данных": "Data processing policy",
+    "Пользовательское соглашение при использовании данных": "User agreement on data use",
+    "Пользовательское соглашение при использовании сайта": "User agreement on data use",
+    "Популярные локации": "Popular locations",
+    "Пресса": "Press",
+    "Прессе": "Press",
+    "Работа у нас": "Work with us",
+    "Расположение и инфраструктура": "Location and infrastructure",
+    "Рассрочка": "Installment plan",
+    "Регион": "Locations",
+    "Регионы": "Regions",
+    "Сад": "Garden",
+    "Свяжитесь с нами": "Contact us",
+    "Связаться": "Contact",
+    "Северная Америка": "North America",
+    "Сначала дешевые": "Cheapest first",
+    "Сначала дешёвые": "Cheapest first",
+    "Сначала дорогие": "Most expensive first",
+    "Сначала новые": "Newest first",
+    "Снять": "Rent",
+    "Согласен на обработку": "I agree to processing",
+    "Согласен на обработку персональных данных": "I agree to the processing of personal data",
+    "Спален": "غرف نوم",
+    "Спальни": "Bedrooms",
+    "Спальни, Ванные": "Bedrooms,bathrooms",
+    "Страна": "Locations",
+    "Страны": "Countries",
+    "ТВ": "TV",
+    "Таунхаусы": "Townhouses",
+    "Тип недвижимости": "Types",
+    "Тип объекта": "Types",
+    "Трасса": "Track",
+    "Турция": "Türkiye",
+    "Удалить все": "Delete all",
+    "Узнать больше": "To learn more",
+    "Участок": "Plot",
+    "Цена": "Price",
+    "Шале": "Chalets",
+    "Южная Америка": "South America",
+    "в": "in",
+    "ван": "Bat",
+    "до": "قبل",
+    "кв.м": "sq.m",
+    "локации": "locations",
+    "объектов": "أشياء",
+    "объявлений": "إعلانات",
+    "оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "leave your contact details and we will contact you as soon as possible",
+    "от": "من",
+    "персональных данных": "personal data",
+    "политикой конфеденциальности": "privacy policy",
+    "спал": "room",
+    "спальни": "Bedrooms"
 }
