fix: Landings + localization + arabic styles

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,4 +1,5 @@
 {
+    "Oneteam подготовит для вас пул доступных вариантов, предоставит переводчика и юриста, и обеспечит бережное сопровождение на каждом этапе сделки.": "Oneteam will prepare a pool of available options for you, provide a translator and lawyer, and provide careful support at every stage of the transaction.",
     "Австралия": "Australia",
     "Азия": "Asia",
     "Анастасия": "Anastasia",
@@ -8,7 +9,9 @@
     "Балкон": "Balcony",
     "Бассейн": "Pool",
     "Без комиссии": "No commission",
+    "Благодаря налаженному партнерству с турецкими банками Oneteam осуществляет продажу недвижимости в Турции в рассрочку, в ипотеку (кредит) под минимальные проценты.": "Thanks to established partnerships with Turkish banks, Oneteam sells real estate in Turkey in installments, on a mortgage (loan) at minimal interest.",
     "В избранное": "To favorites",
+    "В портфеле Oneteam представлены высоколиквидные объекты, предназначенные для разных целей: для инвестиций, сдачи в аренду и просто для комфортной жизни. Все они поступают к нам напрямую от застройщиков, минуя посредников, и это значит, что мы можем предложить вам лучшие цены на них.": "Oneteam's portfolio includes highly liquid properties intended for different purposes: for investment, rental, and simply for a comfortable life. All of them come to us directly from developers, bypassing intermediaries, and this means that we can offer you the best prices for them.",
     "ВНЖ в подарок": "Gift of Residence Permit",
     "ВНЖ и Гражданство": "Residence Permit and Citizenship",
     "Валюта": "Currency",
@@ -17,15 +20,20 @@
     "Ваш телефон": "Your phone number",
     "Весь": "All",
     "Вид": "View",
+    "Возьмем вашу недвижимость в управление": "Let us take control of your property",
     "Все": "All",
     "Все локации": "All locations",
+    "Все сделки заключаются в соответствии с турецким законодательством и с применением инструментов минимизации рисков, а мы отчитываемся перед вами по всем производимым операциям — в том числе и финансовым.": "All transactions are concluded in accordance with Turkish legislation and using risk minimization tools, and we report to you on all transactions performed, including financial ones.",
     "Все типы": "All types",
     "Всего": "Total",
     "Вся": "All",
     "Вторичка": "Secondary",
+    "Выбирая Oneteam": "Choosing Oneteam",
+    "Выгодные условия": "Profitable terms",
     "Горы": "Mountains",
     "Гостиные": "Living rooms",
     "Гражданство": "Citizenship",
+    "Давайте познакомимся.": "Let's get acquainted.",
     "До": "To",
     "До 1 км": "Up to 1 km",
     "До 2 км": "Up to 2 km",
@@ -49,8 +57,10 @@
     "История": "History",
     "Квартиры": "Flats",
     "Квартиры под аренду": "Apartments for rent",
+    "Клиентоориентированность": "Customer focus",
     "Команда": "Team",
     "Коммерческая": "Commercial",
+    "Компания": "Company",
     "Консультант по продажам": "Sales consultant",
     "Контакты": "Contacts",
     "Купить": "Purchase",
@@ -58,17 +68,25 @@
     "Лес": "Forest",
     "Локаций": "Locations",
     "Локация": "Location",
+    "Лучшие цены": "The best prices",
     "Материк": "Locations",
     "Мебель": "Furniture",
+    "Меня зовут Фаиг Ализаде, я — владелец агентства": "My name is Faig Alizadeh, I am the owner of the agency",
     "Миссия": "Mission",
+    "Мы знаем, что сориентироваться в рынке недвижимости другой страны сложно, и заботимся о том, чтобы процесс покупки прошел для вас максимально комфортно.": "We know that it is difficult to navigate the real estate market of another country, and we make sure that the purchase process is as comfortable as possible for you.",
+    "Мы не просто продаем недвижимость от застройщика в Турции, а имеем личные договоренности со строительными компаниями.": "We do not just sell real estate from the developer in Turkey, but have personal agreements with construction companies.",
     "Мы предлагаем готовые стратегии инвестирования в зарубежную недвижимость": "We offer ready-made strategies for investing in overseas real estate",
     "Найти": "Search",
+    "Наша сфера деятельности — сделки с недвижимостью в Турции: мы помогаем клиентам купить, продать, арендовать или сдать в аренду коммерческие и жилые объекты.": "Our field of activity is real estate transactions in Turkey: we help clients buy, sell, rent or lease commercial and residential properties.",
+    "Наши преимущества": "Our advantages",
     "Неважно": "Doesn't matter",
     "Недвижимость": "Real estate",
     "Новостройки": "New buildings",
     "Номер телефона": "Phone number",
     "О компании": "About the company",
     "О проекте": "About the project",
+    "Обеспечим постпродажный сервис": "We will provide after-sales service",
+    "Обеспечим юридическое сопровождение на всех этапах сделки": "We will provide legal support at all stages of the transaction",
     "Общая": "Total",
     "Общая площадь": "Total area",
     "Объекты для получения гражданства :name за инвестиции": "Objects for obtaining :name citizenship by investment",
@@ -86,6 +104,7 @@
     "От застройщика": "From developer",
     "Отзывы": "Reviews",
     "Отправить заявку": "Send request",
+    "Офис агентства расположен в Анталье; зоны нашего особого интереса — это Манавгат, Кемер, Белек, Финике, Сиде, Алания, Махмутлар, Авсаллар, Каргыджак, Кестел. Также мы активно работаем и в других регионах Турецкой Республики, в частности, в Мерсине, Бодруме, Фетхие.": "The agency office is located in Antalya; our areas of special interest are Manavgat, Kemer, Belek, Finike, Side, Alanya, Mahmutlar, Avsallar, Kargicak, Kestel. We are also actively working in other regions of the Republic of Turkey, in particular in Mersin, Bodrum, Fethiye.",
     "Паркинг в подарок": "Free Parking",
     "Парковка": "Parking",
     "Партнерам": "For partners",
@@ -96,13 +115,24 @@
     "Площади кв.м.": "Square meters",
     "Площадь (кв.м)": "Square (sq.m)",
     "Пляж": "Beach",
+    "Подберем объекты под ваш запрос": "We will select objects according to your request",
+    "Пока другие подбирают объекты недвижимости вручную, мы разработали собственный IT-продукт на базе искусственного интеллекта, который анализирует предложения рынка и помогает не только выбрать из них максимально соответствующие запросу клиента, но и определить наиболее ликвидные.": "While others select real estate properties manually, we have developed our own IT product based on artificial intelligence, which analyzes market offers and helps not only select those that best suit the client’s request, but also identify the most liquid ones.",
+    "Покупайте так, как вам удобно!": "Buy the way it suits you!",
     "Покупка недвижимости": "Buy real estate",
+    "Покупка недвижимости в Турции — одно из наиболее стабильных направлений для инвестирования: качественные объекты с высокой доходностью здесь можно получить за сравнительно меньшие деньги, нежели в других странах. Также недвижимость в Турции привлекает возможностью оформления гражданства по упрощенной схеме, освобождением от оплаты НДС и получением других льгот.": "Buying real estate in Turkey is one of the most stable areas for investment: high-quality properties with high returns can be obtained here for relatively less money than in other countries. Also, real estate in Turkey attracts the possibility of obtaining citizenship under a simplified scheme, exemption from VAT and receiving other benefits.",
     "Политика обработки персональных данных": "Data processing policy",
+    "Полная безопасность": "Complete security",
     "Пользовательское соглашение при использовании данных": "User agreement on data use",
     "Пользовательское соглашение при использовании сайта": "User agreement on data use",
+    "Поможем получить выгодные условия по рассрочке и кредиту": "We will help you get favorable terms on installments and loans",
     "Популярные локации": "Popular locations",
+    "Посмотреть каталог объектов": "View the catalog of objects",
+    "Почему клиенты выбирают именно нас?": "Why do clients choose us?",
     "Пресса": "Press",
     "Прессе": "Press",
+    "Приветствую вас, дорогой гость!": "Greetings, dear guest!",
+    "Приобретая недвижимость в Oneteam, вы ничем не рискуете.": "By purchasing real estate from Oneteam, you do not risk anything.",
+    "Проконсультируем и поможем оформить все документы": "We will advise and help you prepare all the documents",
     "Работа у нас": "Work with us",
     "Расположение и инфраструктура": "Location and infrastructure",
     "Рассрочка": "Installment plan",
@@ -122,10 +152,12 @@
     "Спален": "Bedrooms",
     "Спальни": "Bedrooms",
     "Спальни, Ванные": "Bedrooms,bathrooms",
+    "Специалисты Oneteam говорят на русском, турецком, английском, немецком, иранском, арабском языках. Поэтому можете не волноваться: наше с вами сотрудничество не затруднит языковой барьер.": "Oneteam specialists speak Russian, Turkish, English, German, Iranian, and Arabic. Therefore, you don’t have to worry: our cooperation with you will not be hampered by the language barrier.",
     "Страна": "Locations",
     "Страны": "Countries",
     "ТВ": "TV",
     "Таунхаусы": "Townhouses",
+    "Тестовая версия программы": "Test version of the program",
     "Тип недвижимости": "Types",
     "Тип объекта": "Types",
     "Трасса": "Track",
@@ -134,11 +166,15 @@
     "Узнать больше": "To learn more",
     "Участок": "Plot",
     "ФИО": "Your name",
+    "Хороших агентств в Турции много, но у Oneteam есть серьезный козырь.": "There are many good agencies in Turkey, but Oneteam has a serious trump card.",
     "Цена": "Price",
+    "Чем мы будем вам полезны?": "How can we be useful to you?",
     "Шале": "Chalets",
+    "Это позволяет предлагать нашим клиентам специальные расценки, которые ниже, чем если бы вы приобретали напрямую у застройщика.": "This allows us to offer our customers special rates that are lower than if you purchased directly from the developer.",
     "Южная Америка": "South America",
     "в": "in",
     "ван": "Bat",
+    "вы приобретаете надежного партнера, который разбирается в своеобразном характере турецкого рынка недвижимости, где многое зависит от личных связей, и знает, как обойти «подводные камни» законодательства и защитить вас от мошеннических схем.": "you are acquiring a reliable partner who understands the unique nature of the Turkish real estate market, where much depends on personal connections, and knows how to circumvent the pitfalls of legislation and protect you from fraudulent schemes.",
     "до": "to",
     "кв.м": "sq.m",
     "локации": "locations",
