fix: Filter bar params + locale prefix in url + cities on maps

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -19,6 +19,7 @@
     "Вид": "Aussicht",
     "Все": "Alle",
     "Все локации": "Alle Orte",
+    "Все регионы": "Alle Regionen",
     "Все типы": "Alle Typen",
     "Всего": "Gesamt",
     "Вся": "Alle",
