--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -23,6 +23,7 @@
     "Возьмем вашу недвижимость в управление": "Let us take control of your property",
     "Все": "All",
     "Все локации": "All locations",
+    "Все регионы": "All regions",
     "Все сделки заключаются в соответствии с турецким законодательством и с применением инструментов минимизации рисков, а мы отчитываемся перед вами по всем производимым операциям — в том числе и финансовым.": "All transactions are concluded in accordance with Turkish legislation and using risk minimization tools, and we report to you on all transactions performed, including financial ones.",
     "Все типы": "All types",
     "Всего": "Total",
