--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -13,6 +13,7 @@
     "Вид": "Manzara",
     "Все": "Hepsi",
     "Все локации": "Tüm konumlar",
+    "Все регионы": "Tüm bölgeler",
     "Все типы": "Tüm türler",
     "Вся": "Tüm",
     "Вторичка": "İkincil konut",
