feat: Create deadline field for products

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -154,6 +154,7 @@
     "Спальни": "Bedrooms",
     "Спальни, Ванные": "Bedrooms,bathrooms",
     "Специалисты Oneteam говорят на русском, турецком, английском, немецком, иранском, арабском языках. Поэтому можете не волноваться: наше с вами сотрудничество не затруднит языковой барьер.": "Oneteam specialists speak Russian, Turkish, English, German, Iranian, and Arabic. Therefore, you don’t have to worry: our cooperation with you will not be hampered by the language barrier.",
+    "Срок сдачи": "Deadline",
     "Страна": "Locations",
     "Страны": "Countries",
     "ТВ": "TV",
